[package]
name = "dvarcraft"
version = "0.0.0"
keywords = []

[[bin]]
name = "dvarcraft"
path = "src/dvarcraft.rs"

[dependencies]
piston = "*"
piston_window = "0.69.1"
piston-ai_behavior = "0.20.0"
piston2d-opengl_graphics = "0.46.0"
piston2d-sprite = "0.36.0"
piston2d-graphics = "0.21.1"
find_folder = "0.3.0"
uuid = "*"
gfx_device_gl = "0.14.2"
current = "*"
