[package]
name = "dvarcraft"
version = "0.0.0"
keywords = []

[[bin]]
name = "dvarcraft"
path = "src/dvarcraft.rs"

[dependencies]
lazy_static = "0.2"
smallvec = "0.4.2"
fnv = "1.0.5"
genmesh = "*"
obj = "*"
rand = "*"
clock_ticks = "*"
image = "*"
find_folder = "*"
cgmath = "*"
sdl2 = "0.27"
glium = "0.15"
glium_sdl2 = { git="https://github.com/cristicbz/glium-sdl2", ref="0c18cd01efc965c4f91059b796058929695c95c9" }
