[package]
name = "dvarcraft"
version = "0.0.0"
keywords = []

[[bin]]
name = "dvarcraft"
path = "src/dvarcraft.rs"

[dependencies]
cgmath = "0.15"
clock_ticks = "*"
env_logger = "0.4"
find_folder = "*"
gfx = { git="https://github.com/gfx-rs/gfx.git" }
gfx_core = { git="https://github.com/gfx-rs/gfx.git" }
gfx_device_gl = { git="https://github.com/gfx-rs/gfx.git" }
gfx_window_sdl = { git="https://github.com/gfx-rs/gfx.git" }
image = "*"
log = "0.3"
rand = "*"
rusttype = "*"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["ttf", "gfx"]
